# my-blog

./: Makefile  pyproject.toml
my_blog/: settings.py  urls.py  views.py
my_blog/article/: admin.py  apps.py  models.py  urls.py  views.py
my_blog/article/migrations/: 0001_initial.py
my_blog/article/templates/articles/: index.html
my_blog/templates/: about.html  base.html
my_blog/templates/articles/: index.html
